<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort_by_popularity"
        android:title="@string/popular_movies"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sort_by_rating"
        android:title="@string/top_rated_movies"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item
        android:id="@+id/favorites"
        android:title="@string/your_favorites"
        android:orderInCategory="3"
        app:showAsAction="never"/>

</menu>