<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rv_movie_grid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_red_dark"/>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="160dp"
        android:text=""
        android:textSize="@dimen/error_message_text_size"
        android:textColor="@android:color/white"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="@dimen/loading_circle_size"
        android:layout_width="@dimen/loading_circle_size"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>